--- a/static/sass/Player/Player.sass
+++ b/static/sass/Player/Player.sass
@@ -29,7 +29,6 @@
 	display: flex
 	flex: 1
 	align-items: center
-	height: 100%
 	padding: 0
 	margin-left: 2rem
 
